Fix collapsed buttons

--- a/css/kifuforjs.css
+++ b/css/kifuforjs.css
@@ -34,7 +34,7 @@
 	font-size:12px;
 	width:100%;
 	height:70%;
-	overflow: scroll;
+	overflow-x: auto;
 /*	font-family: Consolas, 'Courier New', Courier, Monaco, monospace;*/
 }
 .kifuforjs ul.lines{
@@ -48,7 +48,6 @@
 }
 .kifuforjs ul.lines button, .kifuforjs ul.lines select{
 	width: 100%;
-	height: 12%;
 	padding: 1px;
 }
 .kifuforjs table.ban{border-collapse: collapse;}
